--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.1.2
   audioplayers: ^5.2.1
   web: ^1.1.1
+  file_picker: ^8.0.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
